quick fix overflow not working on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body{
     font-size: 100%;
 }
 
+#overflow{
+    overflow-x: hidden;
+}
+
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!    HEADER/NAVBAR   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 #logo{
